test new background for slide 15

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -58,7 +58,8 @@
 }
 
 .slide-15 {
-  background-image: url('../assets/G20-min.jpg');
+  //background-image: url('../assets/G20-min.jpg');
+  background-image: url('../assets/T20-background.jpg');
 }
 
 .slide-17 {
