--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -9,6 +9,6 @@
     </div>
   </div>
   <video loop muted class="fullscreen-bg-video">
-    <source src="{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}" type="video/mp4">
+    <source src='{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}' type="video/mp4">
   </video>
 </section>
