--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <video loop muted class="fullscreen-bg-video">
-    <source src="{{ "/data/AR_InnovationLoop_720p.mp4" | relative_url }}" type="video/mp4">
+    <source src='{{ "/data/AR_InnovationLoop_720p_2.mp4" | relative_url }}' type="video/mp4">
   </video>
 </section>
 
