--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background financials" id="slide-16">
+<section class="vh-100 financials slide-16" id="slide-16">
     <div class="wrapper h-100">
         <div class="w-100">
             <div class="tabs" data-slide="slide-16">
