--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background joint-message" id="slide-2">
+<section class="vh-100 standard-slide joint-message slide-2" id="slide-2">
     <div class="wrapper h-100">
         <div class="flex center flex-column w-100">
             <div class="tabs" data-slide="slide-2">
