updating landing page to use svg

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,38 +1,45 @@
 <section class="vh-100 landing slide-1">
     <div class="wrapper h-100 flex items-center justify-center">
         <div class="content-wrapper">
-
+            
             {% markdown template_content/home.md %}
             <div class="content">
-                <div class="title"><img src="../assets/CIGI-title-03.svg"></div>
-
-                <div class="intro">
-                    <p>We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</p>
-                    <div class="nav">
-                        <div class="explore">
-                            <div class="up pointer">
-                                <div class="arrows">
-                                    <i class="fa fa-angle-up arrow arrow-2" aria-hidden="true"></i>
-                                    <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
+                <div class="landing-content">
+                    <div class="title">
+                        <img src="../assets/CIGI-title-03.svg">
+                    </div>
+                    
+                    <div class="content-text">
+                        <div class="intro">
+                            <p>We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</p>
+                            <div class="nav">
+                                <div class="explore">
+                                    <div class="up pointer">
+                                        <div class="arrows">
+                                            <i class="fa fa-angle-up arrow arrow-2" aria-hidden="true"></i>
+                                            <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                    <div class="no-underline link pointer pr3">Explore CIGI</div>
+                                </div>
+                                <div class="view-ar">
+                                    <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
+                                    <div class="down pointer">
+                                        <div class="arrows">
+                                            <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
+                                            <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
-                            <div class="no-underline link pointer pr3">Explore CIGI</div>
-                        </div>
-                        <div class="view-ar">
-                            <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
-                            <div class="down pointer">
-                                <div class="arrows">
-                                    <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
-                                    <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
-                                </div>
-                            </div>
-
+                            
                         </div>
                     </div>
-
+                    
                 </div>
             </div>
-
+            
         </div>
     </div>
 </section>
