--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -94,7 +94,7 @@
       border-left: solid 1px $accent-color;
     }
   }
-
+  
   .tab.selected {
     color: $grey-color;
     border: solid 1px $grey-color;
@@ -108,13 +108,13 @@
   .tab:first-child.selected{
     border-left: solid 1px $grey-color;
   }
-
+  
   .download a{
     display: block;
     color: white;
     margin-left: 0.625rem;
     background: $accent-color;
-
+    
     @include media-query($on-laptop){
       margin-left: 0;
     }
@@ -127,7 +127,7 @@
     &.selected:hover{
       background: transparent;
       color: $grey-color;
-
+      
     }
   }
 }
@@ -143,7 +143,7 @@ header .tabs{
 .tab-content {
   .tab {
     display: none;
-
+    
     &.selected {
       display: block;
     }
@@ -213,7 +213,7 @@ p {
   &.slide-17{
     background-position: right;
   }
-
+  
   .wrapper{
     position: relative;
   }
@@ -225,37 +225,37 @@ p {
     padding: 0.5rem 0;
     font-weight: 400;
   }
-
+  
   h3 {
     font-size: 1rem;
     padding-bottom: 0.5rem;
     text-transform: uppercase;
   }
-
+  
   a{
     color: $accent-color;
     text-decoration: none;
-
+    
     &:hover{
       color: $accent-color-50;
     }
   }
-
+  
   .lightbox-link{
     color: $accent-color;
   }
-
+  
   .fa{
     margin-right: 0.5rem;
   }
-
+  
   .fa-play{
     border: solid 1px $accent-color;
     padding: 0.125rem;
     padding-left: 0.2rem;
     font-size: 0.55rem;
   }
-
+  
   .book-cover{
     float: left;
     margin-right: 2rem;
@@ -276,7 +276,7 @@ p {
       color: white;
     }
   }
-
+  
   @include media-query($small-screen){
     //padding-top: 6rem;
     .sig-image{
@@ -344,46 +344,59 @@ header.white{
   }
 }
 
+
+
 .landing{
+  
+  .landing-content{
+    display: table;
+  }
+  
   .wrapper{
     position: relative;
   }
   color: white;
-
+  
   .content-wrapper{
     box-sizing: content-box;
     width: 80%;
   }
-
+  
   h1{display: none;}
-
-  .title, .intro{
-    float: left;
-    width: 50%;
-    padding-top: 2rem;
+  
+  .title, .content-text{
+    display: table-cell;
+    vertical-align: bottom;
   }
+
   .title{
-    font-size: 9rem;
-    line-height: 7rem;
-    font-weight: 800;
+    width: 40%;
+  }
+  
+  .content-text{
+    padding-bottom: 0.5rem;
+    padding-left: 4rem;
   }
 
+  .intro{
+    p{
+      margin-left: -2rem;
+      width: 95%;
+    }
+  }
+  
   .nav{
-    margin: 2rem;
-    left: 47%;
-    position: absolute;
-
     > div{
       float: left;
     }
-
+    
     .link {
       float: left;
       border-top: solid 1px white;
       padding-top: 0.3rem;
       text-transform: uppercase;
       font-weight: 500;
-
+      
       &:hover{
         color: $grey-color;
       }
@@ -403,14 +416,14 @@ header.white{
     .down{
       right: -1rem;
     }
-
+    
     .fa{
       display: block;
       font-size: 1.75rem;
       line-height: 1rem;
       margin-top: 5px;
     }
-
+    
     .arrows{
       position: relative;
       height: 25px;
@@ -422,7 +435,7 @@ header.white{
       transform-origin: 0%;
       color: white;
     }
-
+    
     .down{
       .arrow-1{
         animation: arrow-down 2.5s ease-in-out infinite;
@@ -431,7 +444,7 @@ header.white{
         animation: arrow-down 2.5s 1.25s ease-in-out infinite;
       }
     }
-
+    
     .up{
       .arrow-1{
         animation: arrow-up 2.5s ease-in-out infinite;
@@ -440,7 +453,7 @@ header.white{
         animation: arrow-up 2.5s 1.25s ease-in-out infinite;
       }
     }
-
+    
     @keyframes arrow-up {
       0%   {
         opacity: 0;
@@ -475,20 +488,35 @@ header.white{
     .content{
       margin: 0 2rem;
     }
-
+    
     .intro, .title{
       float: none;
-      width: 100%;
-
     }
     .nav{
       position: relative;
       left: auto;
     }
-
+    
     .content-wrapper{
       padding-top: 3rem;
       width: 100%;
+    }
+  }
+  // start stacking here
+  @include media-query(630px){
+    .landing-content{
+      display: block;
+    }
+    .title {
+      display: block;
+      width: 75%;
+      margin: auto;
+    }
+    img {
+      width: 100%;
+    }
+    .content{
+      margin: 0;
     }
   }
 }
@@ -514,7 +542,7 @@ header.white{
       float: none;
       width: 100%;
     }
-
+    
     &.table1{
       margin-right: 5%;
     }
@@ -524,7 +552,7 @@ header.white{
     td:nth-child(2){
       width: 30%;
     }
-
+    
     thead{
       .title{
         td{
@@ -538,7 +566,7 @@ header.white{
         &:nth-child(1){
           border-right: solid 0.5rem $default-background-color;
         }
-
+        
       }
     }
     tbody{
