--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,7 +6,7 @@
             <div class="content">
                 <div class="landing-content">
                     <div class="title">
-                        <img src="../assets/CIGI-title-03.svg">
+                        <img src='{{ "/assets/CIGI-title-03.svg" | relative_url }}' alt="CIGI 2017"></div>
                     </div>
                     
                     <div class="content-text">
@@ -36,7 +36,7 @@
                             
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
             
