--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,6 +1,6 @@
 <section class="vh-100 standard-slide joint-message slide-2" id="slide-2">
     <div class="wrapper h-100">
-        <div class="flex center flex-column w-100">
+        <div class="flex center flex-column w-100 pr4">
             <div class="tabs" data-slide="slide-2">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
