--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,10 +1,9 @@
 <section class="vh-100 standard-slide slide-17">
+  <script src="https://platform.twitter.com/widgets.js"></script>
+  <script src="https://www.youtube.com/player_api"></script>
   <div class="wrapper h-100 pt6">
-      <div class="w-100 pr4">
-        <h1>Thank You</h1>
-      
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In congue luctus feugiat. Donec et iaculis nisl. Cras facilisis scelerisque mauris venenatis pellentesque. Duis semper sem ultrices tellus ornare, congue posuere tortor tincidunt. Donec luctus, felis sit amet ornare iaculis, lorem ex pretium mi, a sollicitudin augue nibh vitae mauris. Sed quis sollicitudin libero. Aliquam egestas velit et nunc maximus egestas.</p>
-        <p>In aliquam bibendum purus et tempor. Aenean hendrerit orci eget ante congue tincidunt. Praesent molestie tristique dui et tempor. Donec laoreet tortor sed magna rhoncus rhoncus. Aenean id fermentum lacus, vel luctus mi. Nunc in nulla nec tellus pellentesque aliquet at non mi. Nam hendrerit lorem sed efficitur feugiat. Pellentesque id massa nisl. Maecenas eros neque, ultricies vel massa ac, tempor sagittis libero.</p>
-      </div>
+    <h1>Thank You</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In congue luctus feugiat. Donec et iaculis nisl. Cras facilisis scelerisque mauris venenatis pellentesque. Duis semper sem ultrices tellus ornare, congue posuere tortor tincidunt. Donec luctus, felis sit amet ornare iaculis, lorem ex pretium mi, a sollicitudin augue nibh vitae mauris. Sed quis sollicitudin libero. Aliquam egestas velit et nunc maximus egestas.</p>
+    <p>In aliquam bibendum purus et tempor. Aenean hendrerit orci eget ante congue tincidunt. Praesent molestie tristique dui et tempor. Donec laoreet tortor sed magna rhoncus rhoncus. Aenean id fermentum lacus, vel luctus mi. Nunc in nulla nec tellus pellentesque aliquet at non mi. Nam hendrerit lorem sed efficitur feugiat. Pellentesque id massa nisl. Maecenas eros neque, ultricies vel massa ac, tempor sagittis libero.</p>
   </div>
 </section>
