--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -1,13 +1,21 @@
 .gallery {
-  overflow-x: auto;
+  display: grid;
+
+  @include media-query($small-phone) {
+    display: block;
+  }
+  grid-gap: 0.5rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   user-select: none;
-  width: unset !important;
 
   img {
-    max-width: 260px;
+    height: 100%;
     object-fit: cover;
+    object-position: center center;
     transform: scale(1, 1);
     transition: transform 200ms;
+    width: 100%;
   }
 
   img:hover {
@@ -31,11 +39,14 @@
       background-color: $accent-color;
     }
   }
-}
 
-.gallery-img-wrapper {
-  line-height: 0;
-  overflow: hidden;
+  > div {
+    line-height: 0;
+    overflow: hidden;
+    @include media-query($small-screen) {
+      margin-bottom: 0.5rem;
+    }
+  }
 }
 
 .lightbox {
