--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -1,15 +1,26 @@
+$gallery-columns: 5;
+$gallery-rows: 4;
+$gallery-grid-gap: 0.375rem;
+$gallery-height: 50vh;
+$gallery-image-aspect-ratio: 4/3;
+
 .gallery {
   display: grid;
 
   @include media-query($small-phone) {
     display: block;
   }
-  grid-gap: 0.5rem;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+
+  grid-gap: $gallery-grid-gap;
+  grid-template-columns: repeat($gallery-columns, 1fr);
+  grid-template-rows: repeat($gallery-rows, 1fr);
+  height: $gallery-height;
+  max-width: 100%;
   user-select: none;
+  width: calc((#{$gallery-height} - #{$gallery-rows - 1} * #{$gallery-grid-gap}) * #{$gallery-columns} / #{$gallery-rows} * #{$gallery-image-aspect-ratio} + #{$gallery-columns - 1} * #{$gallery-grid-gap});
 
   img {
+    cursor: pointer;
     height: 100%;
     object-fit: cover;
     object-position: center center;
@@ -43,7 +54,7 @@
   > div {
     line-height: 0;
     overflow: hidden;
-    @include media-query($small-screen) {
+    @include media-query($small-phone) {
       margin-bottom: 0.5rem;
     }
   }
@@ -67,8 +78,9 @@
   }
 }
 
-.photo-container {
+.media-container {
   left: 50%;
+  max-width: calc(100% - 2rem);
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
