Add scripts to main.html

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -30,6 +30,7 @@ layout: compress
       {% include gallery.html %}
       {% include mobile-button.html %}
 
+      <script src="https://platform.twitter.com/widgets.js"></script>
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
     </div>
   </body>
