--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,14 +1,12 @@
-<section class="vh-100 landing slide-1">
+<section class="vh-100-ns landing slide-1">
     <div class="wrapper h-100 flex items-center justify-center">
         <div class="content-wrapper">
-            
             {% markdown template_content/home.md %}
             <div class="content">
                 <div class="landing-content">
                     <div class="title">
                         <img src='{{ "/assets/CIGI-title-03.svg" | relative_url }}' alt="CIGI 2017">
                     </div>
-                    
                     <div class="content-text">
                         <div class="intro">
                             <p>We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</p>
@@ -30,16 +28,12 @@
                                             <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
                                         </div>
                                     </div>
-                                    
                                 </div>
                             </div>
-                            
                         </div>
                     </div>
-
                 </div>
             </div>
-            
         </div>
     </div>
 </section>
