--- a/_includes/slide13.html
+++ b/_includes/slide13.html
@@ -1,6 +1,6 @@
-<section class="vh-100 standard-slide slide-13">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+<section class="vh-100-ns standard-slide slide-13">
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide13-blockchain.md %}
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
