--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -1,10 +1,10 @@
-<section class="vh-100 standard-slide slide-14">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+<section class="vh-100-ns standard-slide slide-14">
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide14-imf.md %}
       <div class="lightbox-link">
           <div class="youtube-lightbox pointer" data-videoid="ZGGdBEwtCaM"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</div>
-        
+
     </div>
     </div>
   </div>
