--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background relative overflow-hidden timeline-slide">
+<section class="vh-100-ns default-background relative overflow-hidden timeline-slide">
   <div class="h-100 flex flex-column relative" id="timeline-slide-content">
     <main class="wrapper w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
@@ -46,8 +46,8 @@
     </div>
   </div>
 
-  <div class="mobile-timeline-message dn-ns">
-    <h1>Sorry.</h1>
+  <div class="wrapper dn-ns">
+    <h1 class="pb2">Sorry.</h1>
     <p><em>Explore CIGI</em> cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
   </div>
 </section>
