--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -1,139 +1,163 @@
 .toc-mobile-wrapper li {
-    padding: 0.75rem 0;
+  border-bottom: solid 1px $grey-color-dark;
+  padding: 0.75rem 0;
+}
+
+.cigi-logo-mobile {
+  width: 50px;
+}
+
+@media (max-width: $small-phone - 0.01em) {
+  section {
+    background: $background-color;
     border-bottom: solid 1px $grey-color-dark;
-}
+  }
 
-@media (max-width: 450px){
+  #main-tabs {
+    display: none;
+  }
 
-    section {
-        min-height: 100vh;
-        overflow: inherit;
-        border-bottom: solid 1px $grey-color-dark;
-        background: $background-color;
-    }
-    .pb4, .pr4 {
-        padding: 0;
-    }
-    .absolute {
-        position: initial;
-    }
-    .vh-100 {
-        height: auto;
-    }
-    #explore-cigi-link, #view-ar-link {
-        display: none;
-    }
-    .site-header {
-        background: $background-color;
-        box-shadow: 0 0 1rem 1px $grey-25;
-        .cigi-logo-mobile {
-            width: 50px;
-        }
-    }
-    .show-on-mobile{
-        display: inline-block;
-    }
-    .fixed.sidebar, .navigation-top-button, .navigation-bottom-button {
-        display: none;
-    }
-    .download {
-        a {
-            margin-top: 0;
-        }
-    }
-    .toc-mobile-wrapper {
-        left: 0;
-        top: 0;
-        height: 100vh;
-        width: 100vw;
-        background: black;
-        color: white;
-        position: fixed;
-        overflow: auto;
-        a {
-            color: white;
-            text-decoration: none;
-        }
-        ul {
-            padding: 4em 1em 0 1em;
-            font-size: 1em;
-            list-style: none;
-            li:first-child{
-                display:none;
-            }
+  .site-header {
+    background: $background-color;
+    box-shadow: 0 0 1rem 1px $grey-25;
+  }
 
-        }
+  .sidebar,
+  .navigation-top-button,
+  .navigation-bottom-button {
+    display: none;
+  }
+
+  .download {
+    a {
+      margin-top: 0;
+    }
+  }
+
+  .toc-mobile-wrapper {
+    background: black;
+    color: white;
+    height: 100vh;
+    left: 0;
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+
+    a {
+      color: white;
+      text-decoration: none;
     }
 
-    .header-inverse.site-header.wrapper{
-        background: black;
-        i {
-            color: white;
-        }
-    }
-    #timeline-slide-content, #timeline-filters {
+    ul {
+      font-size: 1em;
+      list-style: none;
+      padding: 4em 1em 0;
+
+      li:first-child {
         display: none;
+      }
+
     }
-    .timeline-slide {
-        padding-top: 5em;
-    }
-    .fa.hidden {
-        display: none !important;
-    }
-    h1 {
-        font-size: 2em !important;
-        line-height: 1.25em !important;
-    }
-    .financials,
-    .standard-slide{
-        padding-top: 3rem;
-    }
-    .remove-bg-image {
-        background-image: none;
-        background: $background-color;
-        opacity: 1;
-        &:before {
-            background: none !important;
-        }
-    }
-    .mobile-button{
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background: $accent-color;
-        color: white;
-        padding: 2px 10px 5px 10px;
-        border-radius: 50%;
-        font-size: 2em;
-        box-shadow: 0 0 0.5rem $grey-25;
-    }
-    .mobile-timeline-message{
-        padding: 0 2em;
-        h1{
-            padding-bottom: 1em;
-        }
-    }
-    .explore,
-    .fullscreen-bg-video{
-        display: none;
-    }
+  }
+
+  #timeline-slide-content,
+  #timeline-filters {
+    display: none;
+  }
+
+  h1 {
+    font-size: 2em !important;
+    line-height: 1.25em !important;
+  }
+
+  .landing,
+  .timeline-slide {
+    min-height: 100vh;
+  }
+
+  .timeline-slide,
+  .financials,
+  .standard-slide {
+    padding-top: 3rem;
+  }
+
+  .mobile-button {
+    background: $accent-color;
+    border-radius: 50%;
+    bottom: 20px;
+    box-shadow: 0 0 0.5rem $grey-25;
+    color: white;
+    font-size: 2em;
+    padding: 2px 10px 5px;
+    position: fixed;
+    right: 20px;
+    z-index: 1;
+  }
+
+  .explore,
+  .fullscreen-bg-video {
+    display: none;
+  }
+
+  .img-container {
     img {
-        padding-bottom: 0.5em;
+      padding-bottom: 0.5rem;
     }
-    .photo-caption{
-        margin: 0;
-        padding-bottom: 1em;
-        p:before {
-            display: none;
-        }
+  }
+
+  .photo-caption {
+    margin: 0;
+    order: 0;
+
+    &::before {
+      display: none;
     }
+  }
 }
 
-@media (min-width: 451px){
-    .cigi-logo-mobile, .toc-close-mobile, .toc-open-mobile{
-        display: none !important;
+@media (min-width: $small-phone) {
+  .cigi-logo-mobile,
+  .toc-close-mobile,
+  .toc-open-mobile {
+    display: none;
+  }
+
+  .slide-3,
+  .slide-10,
+  .slide-11,
+  .slide-12,
+  .slide-13 {
+    .img-container > img {
+      display: none;
     }
-    .slide-3, .slide-10, .slide-11, .slide-12, .slide-13 {
-        background-image: none;
+  }
+
+  .img-container {
+    img {
+      height: 100vh;
+      left: 0;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      width: 100vw;
     }
+    &::before {
+      background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
+      content: ' ';
+      display: block;
+      height: 100%;
+      left: 0;
+      opacity: 1;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+    }
+  }
+
+  .slide-content > :not(.img-container) {
+    position: relative;
+    z-index: 2;
+  }
 }
