--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
 <header id="site-header" class="site-header wrapper w-100 z-8 flex justify-between items-center" role="banner">
-  <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns dn db-ns"><img id="cigi-logo" src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
-  <a href="{{ "https://www.cigionline.org" }}" class="mobile-header-logo">
+  <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns dn db-ns">
+    <img src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns">
+  </a>
+  <a href="{{ "https://www.cigionline.org" }}" class="dn-ns">
     <img class="cigi-logo-mobile" src="{{ "/assets/CIGI-logo-acronym-RGB-transparent.png" | relative_url }}" alt="CIGI Logo">
   </a>
   <div class="flex">
-      <div id="main-tabs" class="tabs mr3">
-          <div id="explore-cigi-link" class="tab">Explore CIGI</div>
-          <div id="view-ar-link" class="tab">Annual Report</div>
-      </div>
+    <div id="main-tabs" class="tabs mr3">
+      <div id="explore-cigi-link" class="tab">Explore CIGI</div>
+      <div id="view-ar-link" class="tab">Annual Report</div>
+    </div>
     <div class="f4"><a class="no-underline" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
     <div class="f4 pl1 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
     <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer"></div>
