--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -1,6 +1,6 @@
-<section class="vh-100 standard-slide slide-12">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+<section class="vh-100-ns standard-slide slide-12">
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide12-ip.md %}
       <div class="lightbox-link">
           <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
