--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,4 +1,4 @@
-<section class="vh-100 financials standard-slide slide-16" id="slide-16">
+<section class="vh-100-ns financials standard-slide">
     <div class="wrapper h-100">
         <div class="w-100 pr4">
             <div class="tabs" data-slide="slide-16">
@@ -7,7 +7,7 @@
                 <div class="tab toggle" data-id="tab-3">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
-           
+
             <div class="tab-content">
                 <div class="tab" data-id="tab-1">
                     {% markdown template_content/slide16-auditor.md %}
@@ -19,8 +19,8 @@
                     {% include slide16-sheet1.html %}
                     {% include slide16-sheet2.html %}
                 </div>
-                <div class="tab" data-id="tab-3">  
-                   
+                <div class="tab" data-id="tab-3">
+
                     <h4>Notes</h4>
                     <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
                     <p>The Operating and Capital Funds account for the Organization’s program delivery, administrative activities, and non-campus related capital assets.</p>
@@ -28,7 +28,7 @@
                     <p>The John Holmes Fund is focused on funding the operations of the library.</p>
                     <p>The Decade Fund is focused on long-term research and capacity building projects to contribute to the development of innovative ideas that are relevant to the Province of Ontario.</p>
                     <p>The Campus Fund is a Organization initiative in collaboration with provincial and federal governments designed to house several graduate schools and programs. Two such initiatives are the Balsillie School of International Affairs (BSIA) and the ILRP. As a hub of different schools and programs, the Campus Fund cultivates an interdisciplinary learning environment focused on developing knowledge of global issues</p>
-                    
+
                 </div>
             </div>
         </div>
