--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -1,6 +1,6 @@
-<section class="vh-100 standard-slide slide-6">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+<section class="vh-100-ns standard-slide slide-6">
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide6-eurozone.md %}
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
@@ -9,7 +9,7 @@
             <div class="lightbox-link">
                 <div class="youtube-lightbox pointer" data-videoid="1r48pRFarEw"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard</div>
                 </div>
-           
+
       </div>
     </div>
   </div>
