--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -1,15 +1,12 @@
-<section class="vh-100 standard-slide slide-7">
-  <div class="wrapper h-100">
-    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+<section class="vh-100-ns standard-slide slide-7">
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide7-undrip.md %}
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
-          <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
-      </div>
-      <div class="photo-caption">
-        <p><em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun</p>
+        <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
       </div>
     </div>
   </div>
