--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -2,7 +2,7 @@
   <div class="h-100 flex flex-column relative" id="timeline-slide-content">
     <main class="wrapper w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
-      <div id="user-hint-1" class="user-select-none">
+      <div id="user-hint-1" class="user-select-none f7">
         <div id="user-hint-hover" class="ttu tracked grey-color tl mb3 fade-in-1 o-0">
           <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/hover.svg" | relative_url }}') no-repeat"></div>
@@ -19,7 +19,7 @@
           Double click timeline to zoom in
         </div>
       </div>
-      <div id="user-hint-2" class="user-select-none dn">
+      <div id="user-hint-2" class="user-select-none f7 dn">
         <div id="user-hint-grab" class="ttu tracked grey-color tl mb3 o-0">
           <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/grab.svg" | relative_url }}') no-repeat"></div>
