--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -8,7 +8,7 @@
     <p>
       Lorem ipsum dolor sit amet
     </p>
-    <div class="mv4-ns mr4-ns">
+    <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
         <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
         <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/3W7A0257.JPG' | relative_url }}"/></div>
