Center header icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
   <a href="{{ "https://www.cigionline.org" }}" class="dn-ns">
     <img class="cigi-logo-mobile" src="{{ "/assets/CIGI-logo-acronym-RGB-transparent.png" | relative_url }}" alt="CIGI Logo">
   </a>
-  <div class="flex">
-    <div id="main-tabs" class="tabs mr3">
+  <div class="flex items-center">
+    <div id="main-tabs" class="tabs">
       <div id="explore-cigi-link" class="tab">Explore CIGI</div>
       <div id="view-ar-link" class="tab">Annual Report</div>
     </div>
-    <div class="f4"><a class="no-underline" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
-    <div class="f4 pl1 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
-    <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer"></div>
+    <div class="f4 ml3"><a class="no-underline" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
+    <div class="f4 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
+    <div id="table-of-contents-button" class="f5 ml3 pointer"></div>
   </div>
 </header>
