--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,7 +1,7 @@
 <section class="vh-100-ns standard-slide joint-message">
     <div class="wrapper h-100">
         <div class="flex center flex-column w-100 pr4">
-            <div class="tabs" data-slide="slide-2">
+            <div class="tabs mb3" data-slide="slide-2">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
             </div>
