making landing page bg cover

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -3,6 +3,8 @@
 .landing {
   background-image: url('../assets/CIGI_Campus-bw-min.jpg');
   filter: saturate(1.2);
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 .slide-2,
