updating photo gallery

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -10,26 +10,26 @@
     </p>
     <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/3W7A0257.JPG' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora on stage at the Think20 (T20) summit" src="{{ '/assets/gallery/380__1TK0083_ed_z.jpg' | relative_url }}"/></div>
-        <div><img alt="Participants in the 2016 Global Think Tank Summit" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora beside then Minister of Foreign Affairs Stéphane Dion" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg' | relative_url }}"/></div>
-        <div><img alt="2016 Global Think Tank Summit roundtable" src="{{ '/assets/gallery/2016-09-30 - Global Think Tank Summit - 17.jpg' | relative_url }}"/></div>
-        <div><img alt="Deputy Governor of the Bank of Canada Timothy Lane on stage at the CIGI Campus" src="{{ '/assets/gallery/2016-11-16-Timothy Lane-20.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2016-11-25 Global Youth Forum - 2_050.jpg' | relative_url }}"/></div>
-        <div><img alt="Local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus" src="{{ '/assets/gallery/2017-03-24 - Model UN - 39.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2017-04-03-Media Panel-Reporting the Refugee Crisis-7.jpg' | relative_url }}"/></div>
-        <div><img alt="Senior Fellow Jeff Rubin on stage at the CIGI Campus" src="{{ '/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/Bessma Momani_015.jpg' | relative_url }}"/></div>
-        <div><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin" src="{{ '/assets/gallery/CIGI Bitcoins_002.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CIGI Innovation meeting-54.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/></div>
-        <div><img alt="World Refugee Council chair Lloyed Axworthy" src="{{ '/assets/gallery/CiGi_67I7855.JPG' | relative_url }}"/></div>
-        <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference" src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/></div>
-        <div><img alt="Launch of Dragon's Footprint" src="{{ '/assets/gallery/IMG_4019.JPG' | relative_url }}"/></div>
-        <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at the CIGI Campus" src="{{ '/assets/gallery/Shearer - CIGI_017.jpg' | relative_url }}"/></div>
-        <div><img alt="Executive members of the World Refugee Council in Geneva Switzerland" src="{{ '/assets/gallery/WRC-Council-Leadership 1.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/ 2016-11-19-091552-19405-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/3W7A0257-optimized.JPG' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora on stage at the Think20 (T20) summit" src="{{ '/assets/gallery/380__1TK0083_ed_z-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Participants in the 2016 Global Think Tank Summit" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora beside then Minister of Foreign Affairs Stéphane Dion" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="2016 Global Think Tank Summit roundtable" src="{{ '/assets/gallery/2016-09-30 - Global Think Tank Summit - 17-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Deputy Governor of the Bank of Canada Timothy Lane on stage at the CIGI Campus" src="{{ '/assets/gallery/2016-11-16-Timothy Lane-20-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2016-11-25 Global Youth Forum - 2_050-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus" src="{{ '/assets/gallery/2017-03-24 - Model UN - 39-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2017-04-03-Media Panel-Reporting the Refugee Crisis-7-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow Jeff Rubin on stage at the CIGI Campus" src="{{ '/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/Bessma Momani_015-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin" src="{{ '/assets/gallery/CIGI Bitcoins_002-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CIGI Innovation meeting-54-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CiGi_67I7832-optimized.JPG' | relative_url }}"/></div>
+        <div><img alt="World Refugee Council chair Lloyed Axworthy" src="{{ '/assets/gallery/CiGi_67I7855-optimized.JPG' | relative_url }}"/></div>
+        <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference" src="{{ '/assets/gallery/IMG_2742-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Launch of Dragon's Footprint" src="{{ '/assets/gallery/IMG_4019-optimized.JPG' | relative_url }}"/></div>
+        <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at the CIGI Campus" src="{{ '/assets/gallery/Shearer - CIGI_017-optimized.jpg' | relative_url }}"/></div>
+        <div><img alt="Executive members of the World Refugee Council in Geneva Switzerland" src="{{ '/assets/gallery/WRC-Council-Leadership 1-optimized.jpg' | relative_url }}"/></div>
       </div>
     </div>
   </div>
