--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,6 +1,6 @@
-<section class="vh-100-ns financials standard-slide">
-    <div class="wrapper h-100">
-        <div class="w-100 pr4">
+<section class="vh-100-ns financials standard-slide slide-16">
+    <div class="wrapper slide-content h-100">
+        <div class="w-100 w-80-l pr4">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
