--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,12 +1,14 @@
 <section class="vh-100-ns standard-slide slide-17">
-  <div class="wrapper h-100 pt6">
-    <div class="slide-content z-1">
-      <h1>Thank You</h1>
-      <div class="img-container">
-        <img src="{{ '/assets/CIGI_Family_Photo_v2.jpg' | relative_url }}" alt="">
+  <div class="wrapper h-100 flex items-end">
+    <div class="w-100 w-80-l pr4">
+      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1">
+        <h1>Thank You</h1>
+        <div class="img-container">
+          <img src="{{ '/assets/CIGI_Family_Photo_v2.jpg' | relative_url }}" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In congue luctus feugiat. Donec et iaculis nisl. Cras facilisis scelerisque mauris venenatis pellentesque. Duis semper sem ultrices tellus ornare, congue posuere tortor tincidunt. Donec luctus, felis sit amet ornare iaculis, lorem ex pretium mi, a sollicitudin augue nibh vitae mauris. Sed quis sollicitudin libero. Aliquam egestas velit et nunc maximus egestas.</p>
+        <p>In aliquam bibendum purus et tempor. Aenean hendrerit orci eget ante congue tincidunt. Praesent molestie tristique dui et tempor. Donec laoreet tortor sed magna rhoncus rhoncus. Aenean id fermentum lacus, vel luctus mi. Nunc in nulla nec tellus pellentesque aliquet at non mi. Nam hendrerit lorem sed efficitur feugiat. Pellentesque id massa nisl. Maecenas eros neque, ultricies vel massa ac, tempor sagittis libero.</p>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In congue luctus feugiat. Donec et iaculis nisl. Cras facilisis scelerisque mauris venenatis pellentesque. Duis semper sem ultrices tellus ornare, congue posuere tortor tincidunt. Donec luctus, felis sit amet ornare iaculis, lorem ex pretium mi, a sollicitudin augue nibh vitae mauris. Sed quis sollicitudin libero. Aliquam egestas velit et nunc maximus egestas.</p>
-      <p>In aliquam bibendum purus et tempor. Aenean hendrerit orci eget ante congue tincidunt. Praesent molestie tristique dui et tempor. Donec laoreet tortor sed magna rhoncus rhoncus. Aenean id fermentum lacus, vel luctus mi. Nunc in nulla nec tellus pellentesque aliquet at non mi. Nam hendrerit lorem sed efficitur feugiat. Pellentesque id massa nisl. Maecenas eros neque, ultricies vel massa ac, tempor sagittis libero.</p>
-    </div>
   </div>
+</div>
 </section>
